--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,11 @@ subprojects {
     }
 
     dependencies {
+        compile group: 'io.netty', name: 'netty-all', version: '4.1.43.Final'
         compile group: 'org.scala-lang', name: 'scala-library', version: '2.13.1'
+        compile group: 'com.typesafe.akka', name: 'akka-actor-typed_2.13', version: '2.6.0'
+        testCompile group: 'com.typesafe.akka', name: 'akka-actor-testkit-typed_2.13', version: '2.6.0'
+        testCompile group: 'org.scalatest', name: 'scalatest_2.13', version: '3.0.8'
 
     }
 
@@ -40,13 +44,12 @@ project(":ca-scheduler-server"){
         compile group: 'org.fusesource.leveldbjni', name: 'leveldbjni-all', version: '1.8'
         compile group: 'com.typesafe.akka', name: 'akka-actor-typed_2.13', version: '2.6.0'
         testCompile group: 'com.typesafe.akka', name: 'akka-actor-testkit-typed_2.13', version: '2.6.0'
-        testCompile group: 'org.scalatest', name: 'scalatest_2.13', version: '3.1.0'
-        testCompile group: 'junit', name: 'junit', version: '4.12'
-
+        testCompile group: 'org.scalatest', name: 'scalatest_2.13', version: '3.0.8'
+        testCompile group: "ch.qos.logback" ,name: "logback-classic", version: '1.2.3'
     }
 }
 project(":ca-scheduler-client"){
     dependencies{
-        compile group: 'io.netty', name: 'netty-all', version: '4.1.43.Final'
+        compile project(":ca-scheduler-common")
     }
 }
