--- a/ca-scheduler-server/src/test/resources/application.conf
+++ b/ca-scheduler-server/src/test/resources/application.conf
@@ -1,26 +1,30 @@
 akka {
+    persistence {
+
+    journal {
+      plugin = "cassandra-journal"
+    }
+  }
   actor {
     provider = cluster
+    serializers {
+           jackson-cbor = "akka.serialization.jackson.JacksonCborSerializer"
+     }
+    serialization-bindings {
+           "com.zhongfei.scheduler.timer.CborSerializable" = jackson-cbor
+    }
   }
   remote {
     artery {
       canonical.hostname = "127.0.0.1"
-//      canonical.port = 25251
     }
   }
-  extensions = [akka.persistence.Persistence]
 
-  persistence {
+}
+cassandra-journal {
+ contact-points = ["192.168.20.198"]
 
-    journal {
-      plugin = "akka.persistence.journal.inmem"
-      auto-start-journals = ["akka.persistence.journal.leveldb"]
-    }
-
-    snapshot-store {
-      plugin = "akka.persistence.snapshot-store.local"
-      auto-start-snapshot-stores = ["akka.persistence.snapshot-store.local"]
-    }
-
-  }
+}
+cassandra-snapshot-store {
+ contact-points = ["192.168.20.198"]
 }
