--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ subprojects {
 }
 project(":ca-scheduler-common"){
     dependencies {
-        compile group: 'com.alibaba', name: 'fastjson', version: '1.2.62'
+        compile group: 'io.spray', name: 'spray-json_2.13', version: '1.3.5'
         compile group: 'io.netty', name: 'netty-all', version: '4.1.43.Final'
         compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
         compile group: 'com.typesafe.scala-logging', name: 'scala-logging_2.13', version: '3.9.2'
